--- a/PodTalkBuddy/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/PodTalkBuddy/en.lproj/MainStoryboard_iPhone.storyboard
@@ -80,21 +80,21 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="soundbar_plate_mono.png" id="p4Q-2d-Zfg">
                                 <rect key="frame" x="13" y="25" width="294" height="157"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="speaker_grill.png" id="zL4-wZ-Wsp">
-                                <rect key="frame" x="0.0" y="172" width="320" height="180"/>
+                                <rect key="frame" x="0.0" y="154" width="320" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" id="57p-hc-pfV">
-                                <rect key="frame" x="11" y="360" width="298" height="23"/>
+                                <rect key="frame" x="11" y="337" width="298" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="sliderMoved:" destination="21" eventType="valueChanged" id="4I6-vI-814"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Eq6-mR-erC">
-                                <rect key="frame" x="133" y="390" width="55" height="44"/>
+                                <rect key="frame" x="132" y="360" width="55" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                 <state key="normal" title="Play">
@@ -140,6 +140,25 @@
         <image name="soundbar_plate_mono.png" width="313" height="158"/>
         <image name="speaker_grill.png" width="320" height="188"/>
     </resources>
+    <classes>
+        <class className="AQLevelMeter" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AQLevelMeter.h"/>
+        </class>
+        <class className="PTBDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PTBDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="play:"/>
+                <relationship kind="action" name="sliderMoved:"/>
+                <relationship kind="outlet" name="detailDescriptionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lvlMeter_in" candidateClass="AQLevelMeter"/>
+                <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="slider" candidateClass="UISlider"/>
+            </relationships>
+        </class>
+        <class className="PTBMasterViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PTBMasterViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
